# management-web-system

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
backend/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
backend/docker/: Dockerfile  docker-compose.yml
backend/migrations/: env.py
backend/migrations/versions/: 0e56ddd40d15_add_contract_employee_relationship.py  4deb101c2dfc_add_is_verified_to_users_table.py  a4362f10e647_update_employee_schema_and_add_.py  a6918f64152c_fix_payroll_datetime_fields.py  bdb8133d6eaa_migration.py  c311438b9211_add_payroll_employee_relationship.py  e4a709fd66e4_init.py
backend/src/: config.py  errors.py  main.py  middleware.py
backend/src/attendance/: routes.py  schemas.py  service.py
backend/src/auth/: dependencies.py  routes.py  schemas.py  service.py  utils.py
backend/src/db/: main.py  models.py  redis.py
backend/src/department/: routes.py  schemas.py  service.py
backend/src/education/: routes.py  schemas.py  service.py
backend/src/employee/: routes.py  schemas.py  service.py
backend/src/errors/: __init__.py  attendance_errors.py  auth_errors.py  department_errors.py  employee_errors.py  payroll_errors.py  position_errors.py
backend/src/middleware/: __init__.py  middleware.py
backend/src/migrations/versions/: bdb8133d6eaa_migration.py
backend/src/payroll/: routes.py  schemas.py  service.py
backend/src/position/: routes.py  schemas.py  service.py
backend/src/workpoint/: schemas.py
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  index.html  package.json  (+3 more)
(+70 files in other folders)
