[tool.poetry]
name = "management-web-system-backend"
version = "0.1.0"
description = "Backend for Management Web System"
authors = ["nampq"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.15"
fastapi = "^0.115.6"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
sqlalchemy = "^2.0.37"
pydantic = "^2.10.5"
mysql-connector-python = "^9.1.0"
pydantic-settings = "^2.7.1"
sqlmodel = "^0.0.22"
itsdangerous = "^2.2.0"
pyjwt = "^2.10.1"
alembic = "^1.14.0"
asyncmy = "^0.2.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
